# oss-tui

./: .gitignore  AGENTS.md  README.md  TODO.md  config.example.toml  pyproject.toml
docs/en/: README.md
docs/zh/: README.md
scripts/: generate_test_data.py
src/oss_tui/: __init__.py  __main__.py  app.py  exceptions.py
src/oss_tui/config/: __init__.py  loader.py  settings.py
src/oss_tui/models/: __init__.py  bucket.py  object.py
src/oss_tui/providers/: __init__.py  aliyun.py  base.py  factory.py  filesystem.py
src/oss_tui/ui/: __init__.py
src/oss_tui/ui/modals/: __init__.py  confirm.py  help.py  input.py  path_input.py  preview.py  progress.py
src/oss_tui/ui/screens/: __init__.py  main.py
src/oss_tui/ui/widgets/: __init__.py  bucket_list.py  file_list.py  search_input.py  status_bar.py
src/oss_tui/utils/: __init__.py  file_detection.py  formatting.py  keybindings.py
tests/: __init__.py  conftest.py
tests/test_config/: test_loader.py
tests/test_providers/: __init__.py  test_aliyun.py  test_aliyun_integration.py  test_factory.py  test_filesystem.py
tests/test_ui/: __init__.py  test_app.py  test_modals.py
tests/test_utils/: test_file_detection.py  test_formatting.py
